apps/default/gateway/auth-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: auth-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.77.32
  listeners:
  - name: http
    hostname: "*.mgmt.<path:vaults/Kubernetes/items/cluster#domain>"
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    hostname: "*.mgmt.<path:vaults/Kubernetes/items/cluster#domain>"
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: mgmt-wildcard
      frontendValidation:
        caCertificateRefs:
        - kind: ConfigMap
          group: ""
          name: auth-gateway-ca
