apps/default/gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: mgmt-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "192.168.77.30"
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.mgmt.sholdee.net"
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.mgmt.sholdee.net"
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-cert
        kind: Secret
        group: ""
        namespace: ingress-nginx
