apps/default/gateway/mgmt-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mgmt-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.77.30
  listeners:
  - name: http
    hostname: "*.mgmt.sholdee.net"
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    hostname: "*.mgmt.sholdee.net"
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: mgmt-wildcard
  - name: unifi-tls
    hostname: "unifi.mgmt.sholdee.net"
    protocol: TLS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Passthrough
  - name: tls
    protocol: TLS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Passthrough
